@@ -1,3 +1,8 @@
+2004-04-28  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/e-cal-model.c (e_cal_view_objects_removed_cb): make sure we
+	remove all objects with the UIDs being removed (recurrences).
+
 2004-04-28  Not Zed  <NotZed@Ximian.com>
 
 	* gui/e-itip-control.c (object_requested_cb): dont shadow source
